--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Wissenschaftliches Arbeiten</title>
+
+    <link rel="stylesheet" type="text/css" href="./page.css">
   </head>
 
   <body id="page-top">
@@ -16,5 +18,6 @@
     <img class="example-pic" id="GIF"/>
     <img class="example-pic" id="PNG"/>
   </body>
+  <script src="./index.js"></script> 
 </html>
 
